--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>Whenever I browsed internet, I was very interested how such things are made and I wanted to be one of those people who create this stuff. 
+		That's my inspiration to become a software developer</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
